--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 </head>
-  <link href="style.css" rel="stylesheet"/>
+<link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='style.css') }}" />
 <body>
   <div id="content">
     <div id="container-info-name">
